--- a/probs_add.html
+++ b/probs_add.html
@@ -24,59 +24,63 @@
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation">
                             <form class="form-inline mx-auto" target="_self">
-                                <div class="form-group"><label for="search-field"></label><input class="form-control search-field" type="search" id="search-field" name="search" placeholder="Search here . . ." style="width: 350px;"><i class="fa fa-search" style="margin-left: 5px;"></i></div>
+                                <div class="form-group"><label for="search-field"></label><input class="form-control search-field" type="search" id="search-field" name="search" placeholder="Cari di sini..." style="width: 350px;"><i class="fa fa-search" style="margin-left: 5px;"></i></div>
                             </form>
                         </li>
-                        <li class="nav-item" role="presentation" style="color: black;"><a class="nav-link" href="#" style="color: rgb(0,0,0);">My Course</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Course</a></li>
+                        <li class="nav-item" role="presentation" style="color: black;"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Kursusku</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Kursus</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Forum</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);"><i class="fa fa-gear"></i>&nbsp;Settings</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);"><i class="fa fa-gear"></i>&nbsp;Pengaturan</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
     <div class="container" id="question-form" style="padding-top: 37px;margin-top: 79px;">
-        <h1 class="question-no" style="padding-left: 55px;">Add Question</h1>
+        <h1 class="question-no" style="padding-left: 55px;">Tambah Pertanyaan</h1>
         <div class="row row-cols-2" style="margin-top: 11px;">
             <div class="col-2 d-inline-flex flex-column justify-content-center align-items-center align-content-center align-self-center add-image" style="padding-top: 7px;">
-                <div class="dropdown" style="background-color: #09b1ec;color: rgb(0,0,0);"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="color: rgb(0,0,0);background-color: rgb(9,177,236);">1 </button>
-                    <div class="dropdown-menu" role="menu" style="background-color: rgb(9,177,236);"><a class="dropdown-item" role="presentation" href="#">2</a><a class="dropdown-item" role="presentation" href="#">3</a><a class="dropdown-item" role="presentation" href="#">4</a><a class="dropdown-item" role="presentation" href="#">5</a></div>
+                <div class="dropdown" style="background-color: #09b1ec;color: rgb(0,0,0);"><button class="btn btn-primary dropdown-toggle question-no" data-toggle="dropdown" aria-expanded="false" type="button" style="color: rgb(0,0,0);background-color: rgb(9,177,236);">No&nbsp;</button>
+                    <div class="dropdown-menu" role="menu"
+                        id="question-no-menu" style="background-color: rgb(9,177,236);"><a class="dropdown-item quetion-no-item" role="presentation" id="1" href="#">1</a><a class="dropdown-item quetion-no-item" role="presentation" id="add-no-item" href="#">Tambahkan</a></div>
                 </div><i class="far fa-image add-image-icon"></i>
-                <p>Add an image</p>
+                <p>Tambahkan Gambar</p>
             </div>
             <div class="col-10 question-form">
-                <form><textarea class="form-control" style="height: 103px;"></textarea></form>
+                <form><textarea class="form-control" style="height: 103px;" placeholder="Soal..."></textarea></form>
             </div>
             <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><span class="choice-numbering" style="padding-top: 30px;">a.</span>
                 <div class="d-flex flex-column add-image" style="margin-left: 9px;"><i class="far fa-image add-image-icon"></i>
-                    <p>Add an image</p>
+                    <p>Tambahkan Gambar</p>
                 </div>
-                <form class="choice-form" style="padding-left: 0px;padding-top: 22px;margin-left: 21px;"><input class="form-control" type="text" style="padding-left: 24px;"></form>
+                <form class="choice-form" style="padding-left: 0px;padding-top: 22px;margin-left: 21px;"><input class="form-control" type="text" style="padding-left: 24px;" placeholder="Pilihan A"></form>
             </div>
             <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><span class="choice-numbering" style="padding-top: 30px;">b.</span>
                 <div class="d-flex flex-column add-image" style="margin-left: 9px;"><i class="far fa-image add-image-icon"></i>
-                    <p class="add-image-text">Add an image</p>
+                    <p class="add-image-text">Tambahkan Gambar</p>
                 </div>
-                <form class="choice-form" style="padding-left: 0px;padding-top: 22px;margin-left: 21px;"><input class="form-control" type="text" style="padding-left: 24px;"></form>
+                <form class="choice-form" style="padding-left: 0px;padding-top: 22px;margin-left: 21px;"><input class="form-control" type="text" style="padding-left: 24px;" placeholder="Pilihan B"></form>
             </div>
             <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><span class="choice-numbering" style="padding-top: 30px;">c.</span>
                 <div class="d-flex flex-column add-image" style="margin-left: 9px;"><i class="far fa-image add-image-icon"></i>
-                    <p>Add an image</p>
+                    <p>Tambahkan Gambar</p>
                 </div>
-                <form class="choice-form" style="padding-left: 0px;padding-top: 22px;margin-left: 21px;"><input class="form-control" type="text" style="padding-left: 24px;"></form>
+                <form class="choice-form" style="padding-left: 0px;padding-top: 22px;margin-left: 21px;"><input class="form-control" type="text" style="padding-left: 24px;" placeholder="Pilihan C"></form>
             </div>
             <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><span class="choice-numbering" style="padding-top: 30px;">d.</span>
                 <div class="d-flex flex-column add-image" style="margin-left: 9px;"><i class="far fa-image add-image-icon"></i>
-                    <p class="add-image-text">Add an image</p>
+                    <p class="add-image-text">Tambahkan Gambar</p>
                 </div>
-                <form class="choice-form" style="padding-left: 0px;padding-top: 22px;margin-left: 21px;"><input class="form-control" type="text" style="padding-left: 24px;"></form>
+                <form class="choice-form" style="padding-left: 0px;padding-top: 22px;margin-left: 21px;"><input class="form-control" type="text" style="padding-left: 24px;" placeholder="Pilihan D"></form>
             </div>
+            <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><button class="btn btn-primary button-submit transition" type="button" style="margin-right: 50%;color: rgb(0,0,0);background-color: rgb(9,177,236);">Simpan</button></div>
+            <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice"
+                style="margin-top: 29px;"><button class="btn btn-primary button-submit transition" id="remove-no-item" type="button" style="margin-right: 50%;color: rgb(0,0,0);background-color: rgb(255,15,0);">Hapus</button></div>
         </div>
-        <div style="margin-top: 11px;"><button class="btn btn-primary" type="button" style="margin-right: 50%;color: rgb(0,0,0);background-color: rgb(9,177,236);">Save changes</button></div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/probsAddRem.js"></script>
 </body>
 
 </html>
