Tambahin dan edit CourseMaterial.html

--- a/CourseMaterial.html
+++ b/CourseMaterial.html
@@ -15,36 +15,13 @@
 </head>
 
 <body style="background-color: rgb(255,255,255);">
-    <div id="navigation">
-        <nav class="navbar navbar-light navbar-expand-lg fixed-top navigation-clean-search" style="padding: 16px;margin-left: 0;color: rgb(0,0,0);background-color: #09b1ec;">
-            <div class="container"><a class="navbar-brand" href="#home" style="font-size: 25px;font-family: 'Playfair Display', serif;letter-spacing: 16px;">ELEVEN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="border-color: rgb(0,0,0);"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div
-                    class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation">
-                            <form class="form-inline mx-auto" target="_self">
-                                <div class="form-group"><label for="search-field"></label>
-                                    <div class="container-fluid d-flex align-items-stretch search-div"><input class="form-control search-field" type="search" id="search-field" name="search" placeholder="Cari di sini..." style="background-color: rgb(255,255,255);width: 350px;"><i class="fa fa-search d-lg-flex d-xl-flex align-items-lg-center justify-content-xl-center align-items-xl-center"
-                                            style="background-color: #0a80aa;padding-right: 10px;padding-left: 12px;"></i></div>
-                                </div>
-                            </form>
-                        </li>
-                        <li class="nav-item" role="presentation" style="color: black;"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Kelasku</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Kelas</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Forum</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);"><i class="fa fa-gear"></i>&nbsp;Pengaturan</a></li>
-                    </ul>
-            </div>
-    </div>
-    </nav>
-    </div>
     <div>
         <div class="container"></div>
         <div class="container" style="padding: 70px;">
-            <h4>Course &lt;Matematika&gt;</h4>
+            <h4>Course &gt; Kalkulus 2 &gt; Materi</h4>
             <div class="row">
                 <div class="col-12">
-                    <p><img src="assets/img/Video.png"><strong>Video</strong></p>
+                    <p><img src="assets/img/Video.png"><strong>3 Video&nbsp;&nbsp;</strong><button class="btn btn-success btn-sm" type="button">Tambah</button></p>
                 </div>
                 <div class="col-auto text-center align-self-center m-auto">
                     <div class="card text-capitalize flex-fill"><img class="card-img-top w-100 d-block" src="assets/img/IntegralBerulang.png">
@@ -62,7 +39,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <p><img src="assets/img/presentation.png"><strong>Presentation</strong></p>
+                    <p><img src="assets/img/presentation.png"><strong>3 Presentasi&nbsp;&nbsp;</strong><button class="btn btn-success btn-sm" type="button">Tambah</button></p>
                 </div>
                 <div class="col-auto text-center align-self-center m-auto">
                     <div class="card text-capitalize flex-fill"><img class="card-img-top w-100 d-block" src="assets/img/ppt1.png">
@@ -80,16 +57,40 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <p><img src="assets/img/exam.png"><strong>Ujian dan Kuis</strong></p>
+                    <p class="text-left"><img src="assets/img/exam.png"><strong>5 Rangkuman&nbsp;&nbsp;</strong><button class="btn btn-success btn-sm" type="button">Tambah</button></p>
                 </div>
                 <div class="col">
-                    <p><input type="checkbox">&nbsp;Quiz Integral Berulang</p>
-                    <p><input type="checkbox">&nbsp;Ujian Integral Berulang</p>
-                    <p><input type="checkbox">&nbsp;Quiz Persamaan Diferensial</p>
-                    <p><input type="checkbox">&nbsp;UjianPersamaan Diferensial</p>
+                    <p><input type="checkbox">&nbsp;Integral Berulang</p>
+                    <p><input type="checkbox">&nbsp;Integral Tentu</p>
+                    <p><input type="checkbox">&nbsp;Persamaan Diferensial Orde 1</p>
+                    <p><input type="checkbox">&nbsp;Persamaan Diferensial Orde 2<br></p>
+                    <p><input type="checkbox">&nbsp;Trigonometri<br></p>
                 </div>
             </div>
         </div>
+    </div>
+    <div id="navigation">
+        <nav class="navbar navbar-light navbar-expand-lg fixed-top navigation-clean-search" style="padding: 16px;margin-left: 0;color: rgb(0,0,0);background-color: #09b1ec;">
+            <div class="container"><a class="navbar-brand" href="#home" style="font-size: 25px;font-family: 'Playfair Display', serif;letter-spacing: 16px;">ELEVEN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2" style="border-color: rgb(0,0,0);"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div
+                    class="collapse navbar-collapse" id="navcol-2">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item" role="presentation">
+                            <form class="form-inline mx-auto" target="_self">
+                                <div class="form-group"><label for="search-field"></label>
+                                    <div class="container-fluid d-flex align-items-stretch search-div"><input class="form-control search-field" type="search" id="search-field-1" name="search" placeholder="Cari di sini..." style="background-color: rgb(255,255,255);"><i class="fa fa-search d-flex d-sm-flex d-lg-flex d-xl-flex justify-content-center align-items-center align-items-sm-center align-items-lg-center justify-content-xl-center align-items-xl-center"
+                                            style="background-color: #0a80aa;padding-right: 10px;padding-left: 12px;"></i></div>
+                                </div>
+                            </form>
+                        </li>
+                        <li class="nav-item" role="presentation" style="color: black;"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Kelasku</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Kelas</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Forum</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);"><i class="fa fa-gear"></i>&nbsp;Pengaturan</a></li>
+                    </ul>
+            </div>
+    </div>
+    </nav>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
