Translasi bahasa Indonesia

--- a/forumlandingpage.html
+++ b/forumlandingpage.html
@@ -8,23 +8,23 @@
 
 <pre>
 
-               <button type="submit">Hot</button>    <button type="submit">New</button>    <button type="submit">Top</button>                                                                                           <img src="./assets/img/sort_symbol.png"/>
+               <button type="submit">Terhangat</button>    <button type="submit">Terbaru</button>    <button type="submit">Teratas</button>                                                                                           <img src="./assets/img/sort_symbol.png"/>
 </pre>
 
 <br>
 <br>
 <pre>
-               <img src="./assets/img/turun.png"/> <big><big><b>134</b></big></big> <img src="./assets/img/upvote.jpg"/>      <big><big><big><b>Advanced Gardening</b></big></big></big>
-			         <big>How can I use my Crispr machine for brocolli?</big>                                        <big>By Alex
+               <img src="./assets/img/turun.png"/> <big><big><b>134</b></big></big> <img src="./assets/img/upvote.jpg"/>      <big><big><big><b>Perkebunan Lanjutan</b></big></big></big>
+			         <big>Bagaimana cara menggunakan Crispr untuk menanam brokoli?</big>                                        <big>Dari Alex
 										            Jul 20, 2020, 6:36 PM</big>
-               <img src="./assets/img/turun.png"/> <big><big><b>100</b></big></big> <img src="./assets/img/upvote.jpg"/>      <big><big><big><b>Advanced Gardening</b></big></big></big>
-			         <big>How can I use my Crispr machine for brocolli?</big>                                        <big>By Shinta
+               <img src="./assets/img/turun.png"/> <big><big><b>100</b></big></big> <img src="./assets/img/upvote.jpg"/>      <big><big><big><b>Perkebunan Lanjutan</b></big></big></big>
+			         <big>Bagaimana cara menggunakan Crispr untuk menanam brokoli?</big>                                        <big>Dari Shinta
 										            Jul 20, 2020, 6:36 PM</big>
-               <img src="./assets/img/turun.png"/> <big><big><b>98</b></big></big> <img src="./assets/img/upvote.jpg"/>       <big><big><big><b>Advanced Gardening</b></big></big></big>
-			         <big>How can I use my Crispr machine for brocolli?</big>                                        <big>By Josep
+               <img src="./assets/img/turun.png"/> <big><big><b>98</b></big></big> <img src="./assets/img/upvote.jpg"/>       <big><big><big><b>Perkebunan Lanjutan</b></big></big></big>
+			         <big>Bagaimana cara menggunakan Crispr untuk menanam brokoli?</big>                                        <big>Dari Josep
 										            Jul 20, 2020, 6:36 PM</big>
-               <img src="./assets/img/turun.png"/> <big><big><b>87</b></big></big> <img src="./assets/img/upvote.jpg"/>       <big><big><big><b>Advanced Gardening</b></big></big></big>
-			         <big>How can I use my Crispr machine for brocolli?</big>                                        <big>By Alex
+               <img src="./assets/img/turun.png"/> <big><big><b>87</b></big></big> <img src="./assets/img/upvote.jpg"/>       <big><big><big><b>Perkebunan Lanjutan</b></big></big></big>
+			         <big>Bagaimana cara menggunakan Crispr untuk menanam brokoli?</big>                                        <big>Dari Alex
 										            Jul 20, 2020, 6:36 PM</big>
 </pre>
 
