--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <div class="form-group"><label for="search-field"></label><input class="form-control search-field" type="search" id="search-field" name="search" placeholder="Search here . . ." style="width: 350px;"><i class="fa fa-search" style="margin-left: 5px;"></i></div>
                             </form>
                         </li>
-                        <li class="nav-item" role="presentation" style="color: black;"><a class="nav-link" href="#" style="color: rgb(0,0,0);">My Course</a></li>
+                        <li class="nav-item" role="presentation" style="color: black;"><a class="nav-link" href="#" style="color: rgb(0,0,0);"> </a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Course</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Forum</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);"><i class="fa fa-gear"></i>&nbsp;Settings</a></li>
