--- a/forumlandingpage.html
+++ b/forumlandingpage.html
@@ -1,31 +1,72 @@
 <!Doctype HTML>
 <html>
 
-<body style="background-color: rgb(234,234,234);">
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas+Neue">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Patua+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
+    <link rel="stylesheet" href="assets/css/Navigation-with-Search.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+
+<body>
+    <div id="navigation">
+        <nav class="navbar navbar-light navbar-expand-lg fixed-top navigation-clean-search" style="padding: 16px;margin-left: 0;color: rgb(0,0,0);background-color: #09b1ec;">
+            <div class="container"><a class="navbar-brand" href="#home" style="font-size: 25px;font-family: Raleway, sans-serif;">Eleven</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="border-color: rgb(0,0,0);"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div
+                    class="collapse navbar-collapse" id="navcol-1">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item" role="presentation">
+                            <form class="form-inline mx-auto" target="_self">
+                                <div class="form-group"><label for="search-field"></label><input class="form-control search-field" type="search" id="search-field" name="search" placeholder="Search here . . ." style="width: 350px;"><i class="fa fa-search" style="margin-left: 5px;"></i></div>
+                            </form>
+                        </li>
+                        <li class="nav-item" role="presentation" style="color: black;"><a class="nav-link" href="#" style="color: rgb(0,0,0);">My Course</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Course</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Forum</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);"><i class="fa fa-gear"></i>&nbsp;Settings</a></li>
+                    </ul>
+            </div>
+    </div>
+    </nav>
+    </div>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
+</body>
+
+</html>
+
+<body style="background-color: rgb(256,256,256);">
     <br><br><br>
-    <h1><h1>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Forum</h1></h1>
+    <h1><h1>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Forum</h1></h1> <pre>                                                                                                                                           <button type="submit">Buat Forum</button></pre>
 </body>
 
 <pre>
 
-               <button type="submit">Terhangat</button>    <button type="submit">Terbaru</button>    <button type="submit">Teratas</button>                                                                                           <img src="./assets/img/sort_symbol.png"/>
+               <button type="submit">Sedang Dibicarakan</button>    <button type="submit">Terbaru</button>    <button type="submit">Teratas</button>                                                                             <big><big>Urutkan</big></big> <img src="./assets/img/sort_symbol.png"/>
 </pre>
 
-<br>
-<br>
 <pre>
-               <img src="./assets/img/turun.png"/> <big><big><b>134</b></big></big> <img src="./assets/img/upvote.jpg"/>      <big><big><big><b>Perkebunan Lanjutan</b></big></big></big>
-			         <big>Bagaimana cara menggunakan Crispr untuk menanam brokoli?</big>                                        <big>Dari Alex
-										            Jul 20, 2020, 6:36 PM</big>
-               <img src="./assets/img/turun.png"/> <big><big><b>100</b></big></big> <img src="./assets/img/upvote.jpg"/>      <big><big><big><b>Perkebunan Lanjutan</b></big></big></big>
-			         <big>Bagaimana cara menggunakan Crispr untuk menanam brokoli?</big>                                        <big>Dari Shinta
-										            Jul 20, 2020, 6:36 PM</big>
-               <img src="./assets/img/turun.png"/> <big><big><b>98</b></big></big> <img src="./assets/img/upvote.jpg"/>       <big><big><big><b>Perkebunan Lanjutan</b></big></big></big>
-			         <big>Bagaimana cara menggunakan Crispr untuk menanam brokoli?</big>                                        <big>Dari Josep
-										            Jul 20, 2020, 6:36 PM</big>
-               <img src="./assets/img/turun.png"/> <big><big><b>87</b></big></big> <img src="./assets/img/upvote.jpg"/>       <big><big><big><b>Perkebunan Lanjutan</b></big></big></big>
-			         <big>Bagaimana cara menggunakan Crispr untuk menanam brokoli?</big>                                        <big>Dari Alex
-										            Jul 20, 2020, 6:36 PM</big>
+               <img src="./assets/img/turun.png"/> <big><big><b>134</b></big></big> <img src="./assets/img/upvote.jpg"/>      <big><big><big><b>Bercocok Tanam</b></big></big></big>                                                                                    <big>oleh Alex</big>
+			         <big>Bagaimana cara saya membasmi hama?</big>                                        <img src="./assets/img/reply.jpg"/> <b><big>2.3 K</big></b> <img src=./assets/img/views.jpg> <b><big>2.3 K</big></b>     <big>Jul 20, 2020, 6:36 PM</big>
+               <img src="./assets/img/turun.png"/> <big><big><b>31</b></big></big> <img src="./assets/img/upvote.jpg"/>       <big><big><big><b>Kalkulus 2</b></big></big></big>                                                                                            <big>oleh Shafira</big>
+			         <big>Bagaimana cara mengerjakan soal ini?</big>                                      <img src="./assets/img/reply.jpg"/> <b><big>1.2 K</big></b> <img src=./assets/img/views.jpg> <b><big>1.8 K</big></b>     <big>Jul 20, 2020, 6:36 PM</big>
+               <img src="./assets/img/turun.png"/> <big><big><b>24</b></big></big> <img src="./assets/img/upvote.jpg"/>       <big><big><big><b>Kalkulus 1</b></big></big></big>                                                                                            <big>oleh Hanny</big>
+			         <big>Apa pembuktian untuk teorema limit tak terbatas dari</big>                   <img src="./assets/img/reply.jpg"/> <b><big>1 K</big></b>   <img src=./assets/img/views.jpg> <b><big>2 K</big></b>        <big>Jul 20, 2020, 6:36 PM</big>
+               <img src="./assets/img/turun.png"/> <big><big><b>24</b></big></big> <img src="./assets/img/upvote.jpg"/>       <big><big><big><b>Cat Air</b></big></big></big>                                                                                                 <big>oleh Fawwaz</big>
+			         <big>Apakah proporsi air yang saya gunakan baik untuk material canvas</big>     <img src="./assets/img/reply.jpg"/> <b><big>4.3 K</big></b> <img src=./assets/img/views.jpg> <b><big>5.3 K</big></b>     <big>Jul 20, 2020, 6:36 PM</big>
 </pre>
 
 </html>
