Benerin file CSS probs_add yang bentrok

--- a/probs_add.html
+++ b/probs_add.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Search.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles-probs_add.css">
 </head>
 
 <body class="text-primary">
@@ -87,9 +87,9 @@
                     <div class="form-check"><input class="form-check-input" type="checkbox" id="JawabanBenar-D"><label class="form-check-label" for="formCheck-1" style="color: rgb(0,0,0);">Jawaban benar</label></div>
                 </form>
             </div>
-            <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><button class="btn btn-primary button-submit transition" type="button" style="color: rgb(0,0,0);background-color: rgb(9,177,236);margin-right: 50%;">Simpan</button></div>
+            <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><button class="btn btn-primary button-submit transition" type="button" style="color: rgb(0,0,0);background-color: rgb(0,255,71);margin-right: 50%;">Simpan</button></div>
             <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice"
-                style="margin-top: 29px;"><button class="btn btn-primary button-delete transition" id="remove-no-item" type="button" style="margin-right: 50%;color: rgb(0,0,0);background-color: rgb(255,15,0);">Hapus</button></div>
+                style="margin-top: 29px;"><button class="btn btn-primary button-delete transition" id="remove-no-item" type="button" style="margin-right: 50%;color: rgb(0,0,0);background-color: rgb(255,62,50);">Hapus</button></div>
             <div class="col">
                 <div></div>
             </div>
@@ -97,7 +97,7 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/Dropdown.js"></script>
+    <script src="assets/js/probs_add-dropdown.js"></script>
 </body>
 
 </html>
