--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Search.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles-home.css">
 </head>
 
 <body style="background-color: rgb(255,255,255);">
@@ -57,11 +59,61 @@
             </div>
     </div>
     </div>
-    <div id="Popular-course" style="margin-top: 100px;">
-        <div class="container" style="width: 100%;height: 100vh;">
-            <h2 class="text-center" id="title-popular" style="font-family: 'Patua One', cursive, sans-serif;">Kelas-kelas terpopuler kami</h2>
-            <div class="row"></div>
+    <div id="below-base" style="margin-top: 40px;width: 100%;padding: 100px;">
+        <div class="container-fluid padding">
+            <div class="row welcome text-center">
+                <div class="col-12">
+                    <h1><strong>Kelas Populer Kami</strong></h1>
+                    <hr>
+                </div>
+            </div>
         </div>
+        <div class="container-fluid padding">
+            <div class="row padding">
+                <div class="col-md-3" style="padding: 10px;padding-top: 15px;padding-bottom: 15px;">
+                    <div class="card"><img class="card-img-top w-100" src="assets/img/calculus.PNG" style="width: 250px;height: 220px;">
+                        <div class="card-body">
+                            <h4 class="card-title">Kalkulus II</h4>
+                            <p class="card-text">329 orang rekomendasi kelas ini</p>
+                            <p class="text-right" style="font-size: 12px;">Bambang Sutrisno, S.T M.T</p><a class="btn btn-outline-primary" href="#">Lihat Kelas</a></div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="padding: 10px;padding-top: 15px;padding-bottom: 15px;">
+                    <div class="card"><img class="card-img-top w-100" src="assets/img/calculus.PNG" style="width: 250px;height: 220px;">
+                        <div class="card-body">
+                            <h4 class="card-title">Kalkulus II</h4>
+                            <p class="card-text">329 orang rekomendasi kelas ini</p>
+                            <p class="text-right" style="font-size: 12px;">Bambang Sutrisno, S.T M.T</p><a class="btn btn-outline-primary" href="#">Lihat Kelas</a></div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="padding: 10px;padding-top: 15px;padding-bottom: 15px;">
+                    <div class="card"><img class="card-img-top w-100" src="assets/img/calculus.PNG" style="width: 250px;height: 220px;">
+                        <div class="card-body">
+                            <h4 class="card-title">Kalkulus II</h4>
+                            <p class="card-text">329 orang rekomendasi kelas ini</p>
+                            <p class="text-right" style="font-size: 12px;">Bambang Sutrisno, S.T M.T</p><a class="btn btn-outline-primary" href="#">Lihat Kelas</a></div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="padding: 10px;padding-top: 15px;padding-bottom: 15px;">
+                    <div class="card"><img class="card-img-top w-100" src="assets/img/calculus.PNG" style="width: 250px;height: 220px;">
+                        <div class="card-body">
+                            <h4 class="card-title">Kalkulus II</h4>
+                            <p class="card-text">329 orang rekomendasi kelas ini</p>
+                            <p class="text-right" style="font-size: 12px;">Bambang Sutrisno, S.T M.T</p><a class="btn btn-outline-primary" href="#">Lihat Kelas</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-dark">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-whatsapp-outline"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram-outline"></i></a></div>
+                </div>
+                <p class="copyright">Eleven Learning © 2020</p>
+            </div>
+        </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
