--- a/course_click.html
+++ b/course_click.html
@@ -20,7 +20,7 @@
 <body style="background-color: rgb(220,220,220);">
     <div id="navigation">
         <nav class="navbar navbar-light navbar-expand-lg fixed-top navigation-clean-search" style="padding: 16px;margin-left: 0;color: rgb(0,0,0);background-color: #09b1ec;">
-            <div class="container"><a class="navbar-brand" href="#home" style="font-size: 25px;font-family: 'Playfair Display', serif;letter-spacing: 16px;">ELEVEN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2" style="border-color: rgb(0,0,0);"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" href="#home" style="font-size: 25px;font-family: 'Playfair Display', serif;letter-spacing: 16px;">ELEVEN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2" style="border-color: rgb(0,0,0);width: auto;"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div
                     class="collapse navbar-collapse" id="navcol-2">
                     <ul class="nav navbar-nav ml-auto">
